--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.cdy.util</groupId>
     <artifactId>websocket-server</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0.RELEASE</version>
 
     <properties>
         <spring.version>5.1.19.RELEASE</spring.version>
